--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
+    margin-top: 15px;
+    margin-left: 50px;
+    margin-right: 50px;
     /* display: flex;
     flex-direction: column; */
     min-height: 100vh;
@@ -8,8 +10,10 @@ body {
 
 .header {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
+    border: 2px solid;
+    background-color: #1F2937;
 
 }
 
@@ -18,11 +22,47 @@ body {
     display: flex;
     align-items: center;
     gap: 16px;
+    padding: 15px;
+
+}
+
+a,
+li {
+    text-decoration: none;
+    list-style-type: none;
 }
 
 
-.upper-header {
+
+
+/* Prvi dio headera */
+
+.header-content {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
+    border: 2px solid;
+    height: 400px;
+    background-color: #1F2937;
 
 }
+
+.left-content {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    max-width: 350px;
+    padding: 15px;
+}
+
+
+.right-content {
+    display: flex;
+    border: 2px solid;
+    flex-basis: 500px;
+    align-self: center;
+    margin-right: 15px;
+
+}
+
+img {}
