--- a/style.css
+++ b/style.css
@@ -14,22 +14,34 @@ body {
     align-items: center;
     border: 2px solid;
     background-color: #1F2937;
+    border-bottom: 0;
 
 }
 
 .left-links,
 .right-links {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     align-items: center;
     gap: 16px;
     padding: 15px;
+    color: white;
 
+}
+
+.left-links {
+    margin-left: 100px;
+}
+
+.right-links {
+    margin-right: 100px;
 }
 
 a,
 li {
     text-decoration: none;
     list-style-type: none;
+    color: white;
 }
 
 
@@ -38,12 +50,14 @@ li {
 /* Prvi dio headera */
 
 .header-content {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     border: 2px solid;
     height: 400px;
     background-color: #1F2937;
+    border-top: 0;
 
 }
 
@@ -53,6 +67,7 @@ li {
     flex-direction: column;
     max-width: 350px;
     padding: 15px;
+    margin-left: 100px;
 }
 
 
@@ -61,7 +76,37 @@ li {
     border: 2px solid;
     flex-basis: 500px;
     align-self: center;
-    margin-right: 15px;
+    margin-right: 100px;
+    background-color: grey;
+    height: 292.16px;
+
+}
+
+h1 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 0;
+
+
+}
+
+.subtext {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+button {
+    background-color: #3882F6;
+    border-radius: 5px;
+    color: white;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: 10px;
+    margin-top: 15px;
+    font-size: 18px;
+
 
 }
 
