--- a/style.css
+++ b/style.css
@@ -107,7 +107,76 @@ button {
     margin-top: 15px;
     font-size: 18px;
 
-
 }
 
 img {}
+
+/* Container Upper-Content */
+.container h2 {
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.upper-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 100px;
+}
+
+
+.one,
+.two,
+.three,
+.four {
+    display: flex;
+    flex-direction: column;
+    max-width: 200px;
+}
+
+.text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    margin-top: 5px;
+    font-size: 18px;
+    color: #1f2937;
+}
+
+.upper-content img {
+    border: 5px solid #3882F6;
+    border-radius: 20px;
+    width: 200px;
+    height: 200px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Footer */
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #F9FAF8;
+    background-color: #1F2937;
+}
