--- a/style.css
+++ b/style.css
@@ -153,6 +153,39 @@ img {}
     height: 200px;
 }
 
+/* Middle-content */
+
+.middle-content {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    margin-top: 10px;
+
+}
+
+.mtext {
+    display: flex;
+    text-align: left;
+    max-width: 1100px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.author-con {
+    text-align: right;
+    margin-left: 870px;
+    margin-top: 10px;
+    font-weight: 900;
+    font-size: 18px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 
 
@@ -169,14 +202,16 @@ img {}
 /* Footer */
 
 .footer {
-    position: fixed;
+
     bottom: 0;
-    left: 0;
-    right: 0;
+    /* left: 0;
+    right: 0; */
     height: 52px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #F9FAF8;
     background-color: #1F2937;
+    /* margin-left: 5px;
+    margin-right: 50px; */
 }
